# marnaPY

./: .gitignore  README.md  analyse_marnage.ipynb  analysis.txt  environment.yml  modele.inp  modele.rpt  pyproject.toml
data/: analysis.txt
notebooks/: analyse_marnage.ipynb
src/: __init__.py  analyse_marnage.ipynb
