[project]
name = "marnaPY_Valmoun"
version = "1.0.0"
description = "Analyse des marnages de réservoirs EPANET."
authors = [
    { name = "Valentin Mounier" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Proprietary" }

[tool.setuptools]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "pytest",
    "jupyter"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/ValentinMounier/marnaPY"
Issues = "https://github.com/ValentinMounier/marnaPY/issues"